leptos-fluent-macros/tests/ui/leptos_fluent/stable/fail/tr_macros_invalid_types.stderr
error: argument must be a string literal
 --> tests/ui/leptos_fluent/stable/fail/tr_macros_invalid_types.rs:8:9
  |
8 |     _ = move_tr!(MyStruct(1));
  |         ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `format` which comes from the expansion of the macro `move_tr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: argument must be a string literal
  --> tests/ui/leptos_fluent/stable/fail/tr_macros_invalid_types.rs:10:9
   |
10 |     _ = tr!(());
   |         ^^^^^^^
   |
   = note: this error originates in the macro `format` which comes from the expansion of the macro `tr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/leptos_fluent/stable/fail/tr_macros_invalid_types.rs:6:13
  |
6 |     _ = tr!(1);
  |         ----^-
  |         |   |
  |         |   expected `&str`, found integer
  |         arguments to this method are incorrect
  |
note: method defined here
 --> $WORKSPACE/leptos-fluent/src/lib.rs
  |
  |     pub fn tr(&self, text_id: &str) -> String {
  |            ^^
